Install and include directives corrections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,15 @@ ELSE()
 								${lapack_blas_windows_dll}
 					DESTINATION ${SuiteSparse_LAPACK_BLAS_LIB_DIR}
 			)
+			set(SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR ${CMAKE_INSTALL_PREFIX}/${SuiteSparse_LAPACK_BLAS_LIB_DIR})
+			if(EXISTS "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/libblas.lib")
+				file(COPY "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/libblas.lib" DESTINATION "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/custom")
+				file(RENAME "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/custom/libblas.lib" "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/custom/blas.lib")
+			endif()
+			if(EXISTS "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/liblapack.lib")
+				file(COPY "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/liblapack.lib" DESTINATION "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/custom")
+				file(RENAME "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/custom/liblapack.lib" "${SuiteSparse_FULL_LAPACK_BLAS_LIB_DIR}/custom/lapack.lib")
+			endif()
 		endif()
 	ENDIF()
 ENDIF()
